--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,45 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  
+  thanks: "Thank you for your order"
+
+  store:
+    index:
+      title_html: "Your Pragmatic Catalog"
+      add_html: "Add to Cart"
+
+  carts:
+    cart:
+      title: "Your Cart"
+      empty: "Empty Cart"
+      checkout: "Checkout"
+
+#  number:
+#    currency:
+#      format: 
+#      unit: "$"
+#      precision: 2
+ #     seperator: "."
+  #    delimiter: ","
+   #   format: "%u%n%"
+
+  layouts:
+    application:
+      title:  "Pragmatic Bookshelf"
+      home: "Home"
+      questions: "Questions"
+      news: "News"
+      contact: "Contact"
+
+  orders:
+    new:
+      legend:  "Please Enter Your Details"
+    form: 
+      name: "Name"
+      address_html: "Address"
+      email: "E-mail"
+      pay_type: "Pay with"
+      pay_prompt_html: "Select a payment method"
+      submit: "Place Order"
+
